--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -2,13 +2,13 @@ formatter: "md tbl" # this is required
 
 version: ">= 0.14"
 
-recursive:
-  enabled: true
-  path: ./examples
-
 sections:
   hide: []
   show: [all]
+
+recursive:
+  enabled: true
+  path: examples
 
 content: |-
   {{ .Header }}
